--- a/sau_layer_app/pubspec.yaml
+++ b/sau_layer_app/pubspec.yaml
@@ -36,6 +36,19 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
 
+  http: ^1.1.0
+  dartz: ^0.10.1
+  rxdart: ^0.27.7
+  flutter_bloc: ^9.0.0
+  get_it: ^7.6.0
+  provider: ^6.0.5
+
+  sau_layer_data:
+    git:
+      url: https://github.com/com-sci-23/sau-layer-data
+      path: sau_layer_data
+      ref: main
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
