--- a/sau_layer_app/pubspec.yaml
+++ b/sau_layer_app/pubspec.yaml
@@ -57,6 +57,7 @@ dev_dependencies:
   flutter_lints: ^4.0.0
   mockito: ^5.4.3
   bloc_test: ^10.0.0
+  network_image_mock: ^2.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
